<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    tools:context="com.odaniel.practica.Presentation.DetalleTemas.Implementations.DetalleTemasActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imgBanner"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/layoutprincicpal"
                android:layout_below="@+id/imgBanner">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/background_border_detalle">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/title"
                        android:id="@+id/txtTitleDetalle"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/imgIconDetalle"/>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:id="@+id/imgIconDetalle"
                        android:src="@drawable/icon1"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/header"
                        android:id="@+id/txtHeader"
                        android:layout_below="@+id/txtTitleDetalle"
                        android:layout_alignStart="@+id/txtTitleDetalle"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/public_description"
                        android:id="@+id/txtPublicDescriptionDetalle"
                        android:layout_marginTop="80dp"
                        android:layout_below="@+id/imgIconDetalle"
                        android:layout_alignParentStart="true"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/imgHeader"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/subscribers"
                        android:id="@+id/txtSubscribersDetalle"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/subscribers"
                        android:id="@+id/txtSubscribersDetalleD"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/spoilers"
                        android:id="@+id/txtSpoilers"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/spoilers"
                        android:id="@+id/txtSpoilersD"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/links"
                        android:id="@+id/txtLinksDetalle"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/links"
                        android:id="@+id/txtLinksD"
                        android:autoLink="web"
                        android:linksClickable="true"/>


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
